@@ -22,6 +22,8 @@ Revision history for {{$dist->name}}
           Etheridge)
         - the test generated by [MetaTests] is now an author test, not a
           release test (thanks, Karen Etheridge)
+        - all builds now result in a .build/latest symlink (thanks again,
+          Karen)
 
 6.015     2020-05-29 14:30:51-04:00 America/New_York
         - add docs for "dzil release -j" (thanks, Jonas B. Nielsen)
